design listing & map for the location

--- a/package.json
+++ b/package.json
@@ -13,17 +13,23 @@
 		"lint:fix": "eslint src/**/*.{tsx,ts,js,jsx} --fix"
 	},
 	"dependencies": {
+		"@react-google-maps/api": "^2.18.1",
 		"axios": "^0.27.2",
 		"crypto-js": "^4.1.1",
 		"formik": "^2.2.9",
+		"google-map-react": "^2.2.1",
+		"google-maps-react": "^2.0.6",
 		"lodash": "^4.17.21",
 		"query-string": "^7.1.1",
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.5.0",
 		"react-dom": "^18.2.0",
+		"react-google-maps": "^9.4.5",
+		"react-hook-google-maps": "^0.0.3",
 		"react-redux": "^8.0.1",
 		"react-router-dom": "^6.4.4",
 		"react-scripts": "5.0.0",
+		"react-select": "^5.7.3",
 		"react-toastify": "^9.1.1",
 		"redux": "^4.2.0",
 		"redux-thunk": "^2.4.1",
@@ -36,6 +42,7 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^14.2.1",
 		"@types/crypto-js": "^4.1.1",
+		"@types/google-map-react": "^2.1.7",
 		"@types/jest": "^27.4.1",
 		"@types/lodash": "^4.14.189",
 		"@types/node": "^16.11.26",
